unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/project_cloud__Project_Sub_Task__c.object-meta.xml
<CustomObject>
    <label>Project Sub Task</label>
    <nameField>
        <label>Project Sub Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sub Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>