unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating which sub task this sub task was cloned from</description>
    <inlineHelpText>Shows the Name of a sub task that the Sub Task was cloned from.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>project_cloud__Project_Sub_Task__c</referenceTo>
    <relationshipLabel>Cloned Sub_Tasks</relationshipLabel>
    <relationshipName>Cloned_Sub_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>