unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Owner__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Owner of this Sub Task</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Sub Tasks</relationshipLabel>
    <relationshipName>Project_Sub_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>