unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Position__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Position__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>