unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Project_Sharing__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Sharing__c</fullName>
    <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
    <label>Project Sharing</label>
    <referenceTo>project_cloud__Project_Sharing__c</referenceTo>
    <relationshipLabel>Project Sub Tasks</relationshipLabel>
    <relationshipName>Project_Sub_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>