unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Project Task that the Project Sub Task belongs to</description>
    <inlineHelpText>The Project Task that the Project Sub Task belongs to</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Project Sub Tasks</relationshipLabel>
    <relationshipName>Project_Sub_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>