unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Short_Description__c</fullName>
    <description>A short description of the Sub Task</description>
    <inlineHelpText>A plain text area with a 255 character limit allows users to provide a description of the Sub Task.</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>