unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/fields/project_cloud__Sub_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Sub_Task_Number__c</fullName>
    <description>Auto Number field for uniquely identifying Project Sub Tasks.</description>
    <displayFormat>ST-{00000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto number for the Project Sub Task.</inlineHelpText>
    <label>Project Sub Task Number</label>
    <type>AutoNumber</type>
</CustomField>