unpackaged/main/default/objects/project_cloud__Project_Sub_Task__c/listViews/project_cloud__All_Project_Tasks.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Project_Tasks</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Sub_Task_Number__c</columns>
    <columns>project_cloud__IsComplete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>